# mitmproxy-rs

./: .gitignore  AGENTIC_AI_TASKGUARD_GUIDE.md  COMPILATION_FIXES.md  CONTINUATION_PROMPT.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md  TASK_ANALYSIS.md
src/: auth.rs  certs.rs  config.rs  connection.rs  error.rs  filter.rs  flow.rs  lib.rs  main.rs  server.rs  sse.rs  websocket.rs
src/api/: auth.rs  handlers.rs  mod.rs  websocket.rs
src/proxy/: commands.rs  context.rs  events.rs  layer.rs  mod.rs  server.rs  tunnel.rs
src/proxy/layers/: http.rs  mod.rs  tcp.rs  tls.rs  websocket.rs
tasks/api/: api-001.md  api-002.md  api-003.md  api-004.md
tasks/backend/: backend-001.md  backend-002.md  backend-003.md  backend-004.md  backend-005.md  backend-006.md  backend-007.md  backend-008.md  backend-009.md  backend-010.md  backend-011.md  backend-012.md  backend-013.md
tasks/deployment/: deployment-001.md
tasks/setup/: setup-001.md
tasks/testing/: testing-001.md
